Sat Nov  9 12:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c: unify names of vm state version counters to 'serial'.
	  This includes renaming 'vm_state_version_t' to 'rb_serial_t',
	  'method_state' to 'method_serial', 'seq' to 'class_serial',
	  'vmstat' to 'constant_serial', etc.

	* insns.def: ditto
	* internal.h: ditto
	* vm.c: ditto
	* vm_core.h: ditto
	* vm_insnhelper.c: ditto
	* vm_insnhelper.h: ditto
	* vm_method.c: ditto

Sat Nov  9 09:22:29 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_page_sweep, rgengc_rememberset_mark): Refactoring.
	  Get bitmaps directly.

Sat Nov  9 09:16:36 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (RVALUE_PROMOTE_INFANT): Refactoring. Remove duplicated nonsense
	  code.

Sat Nov  9 09:04:48 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_marks_test): Bugfix. Fix a struct member name for build
	  with RGENGC_CHECK_MODE.

Sat Nov  9 08:58:23 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c : Add GC_PROFILE_DETAIL_MEMORY option.
	  If GC_PROFILE_MORE_DETAIL && GC_PROFILE_DETAIL_MEMORY,
	  maxrss, minflt and majflt are added to each profile record.

Sat Nov  9 07:41:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (rb_vm_backtrace_object, rb_gc_count): make prototype
	  declarations, not old-K&R style.

Sat Nov  9 06:11:14 2013  vo.x (Vit Ondruch)  <vondruch@redhat.com>

	* tool/rbinstall.rb (Gem::Specification#collect): make stable
	  Gem::Specification.files in default .gemspecs the different order of
	  "files" in .gemspec files makes them different therefore possibly
	  conflicting in multilib scenario.  patch by vo.x (Vit Ondruch) at
	  [ruby-core:57544] [Bug #8623].

Sat Nov  9 01:59:18 2013  Aman Gupta <ruby@tmm1.net>

	* ext/objspace/object_tracing.c: Add experimental methods to
	  dump objectspace as json: ObjectSpace.dump_all and
	  ObjectSpace.dump(obj). These methods are useful for debugging
	  reference leaks and memory growth in large ruby applications.